Incorporating coauthor feedback :)

--- a/proposal/2021A/DDT/tess_luhman16/GemPhase1_US.tex
+++ b/proposal/2021A/DDT/tess_luhman16/GemPhase1_US.tex
@@ -47,15 +47,15 @@
 \sciencejustification
  \fontfamily{ptm}\selectfont{
 
-Condensate clouds should pervade the atmospheres of ultracool brown dwarfs and exoplanets, dictating the energy balance of these substars and controlling their photometric and spectroscopic properties. Yet physical understanding of these clouds has largely been limited to coarse phenomenology.  Clouds are difficult to model and even more difficult to observe, owing to the limitations of observing exoplanets near bright host-stars and faint ultracool LT dwarfs.
+Condensate clouds should pervade the atmospheres of brown dwarfs and exoplanets, dictating the energy balance of these substellar objects and controlling their photometric and spectroscopic properties. Yet physical understanding of these clouds has largely been limited to coarse phenomenology.  Clouds are difficult to model and even more difficult to observe, owing to the absence of prominent spectral features and the intrinsic low luminosity of ultracool LT dwarfs.  Variable brown dwarfs offer a straightforward way to compare atmospheric columns with different cloud opacities to isolate the effect and properties of clouds.
 
-Last month Apai et al. 2021 presented the \emph{TESS} lightcurve of the nearest known brown dwarf system, Luhman 16AB, residing at a mere 2 pc from the Sun, it is our third closest neighbor. The proximity of this ultracool L7.5/T0.5 pair makes them the latest spectral type objects amenable to contemporaneous TESS monitoring and high fidelity ground-based observations.  Remarkably, the Sector 10 TESS lightcurve of Luhman 16 shows over 100 rotations with global peak-to-valley cloud-induced variations over 25 days exceeding 15\% (Figure 1).  These variations are caused by clouds of unknown extents, positions, thicknesses, and opacities.
+Last month Apai et al. 2021 presented the \emph{TESS} lightcurve of the nearest known brown dwarf system, Luhman 16AB; residing at a mere 2 pc from the Sun, it is our third closest neighbor. The proximity of this ultracool L7.5/T0.5 pair makes them the latest spectral type objects amenable to contemporaneous TESS monitoring and high fidelity ground-based observations.  Previous spatially resolved observations (Buenzli et al. 2015) showed that Luhman 16 A has weak to no variability but Luhman 16 B has a $>10\%$ variability in the near infrared.  It was not clear what the TESS lightcurve would show.  Remarkably, the Sector 10 TESS lightcurve of Luhman 16 shows over 100 rotations with global peak-to-valley cloud-induced variations over 25 days exceeding 15\% (Figure 1).  The long-term variations can be attributed to cloud pattern changes driven by atmospheric circulation.  However, due to the lack of simultaneous spectroscopic data, how much the cloud opacity, thickness, and particle size changed is unknown.
 
-Gemini did not observe Luhman 16 contemporaneously with TESS Sector 10 (March 26 - April 22, 2019).  We missed a key opportunity before, but will not miss it this time-- simultaneous monitoring will allow us to know the rotational phase (from TESS) and with high-resolution spectroscopy and TESS, we can disentangle the A/B components and variability.  
+Gemini did not observe Luhman 16 contemporaneously with TESS Sector 10 (March 26 - April 22, 2019).  We missed a key opportunity before, but will not miss it this time-- simultaneous TESS monitoring will allow us to know the rotational phase, and when coupled with high-resolution spectroscopy, we can disentangle the A/B components and variability by observing the spectral changes due to variations in cloud opacities.
 
-Here we propose multi-epoch IGRINS observations contemporaneous with continuous TESS Sector 36 monitoring, from March 8 - March 18.  The epochs can be scheduled randomly during this 10 day window, easing their burden on the queue.  With five epochs---and TESS-Sector-10-like modulations---we expect to sample a fux range of $\sim 8\%$ (Figure 2), corresponding to a cloud coverage change large enough to detect with IGRINS with $S/N\sim100$.  We will decompose the IGRINS spectra into three components: 1) Luhman 16A, assumed weakly variable; 2) Luhman 16B clouds; and 3) Luhman 16B cloud-free.  We will be able to uniquely disentangle these components because the TESS data informs the relative phase of cloud coverage.
+Here we propose multi-epoch IGRINS observations contemporaneous with continuous TESS Sector 36 monitoring, from March 8 - March 18.  The epochs can be scheduled randomly during this 10 day window, easing their burden on the queue.  With five epochs---and TESS-Sector-10-like modulations---we expect to sample a flux range of $\sim 8\%$ (Figure 2), corresponding to a cloud coverage change large enough to detect with IGRINS with $S/N\sim100$.  We will decompose the IGRINS spectra into three components (Buenzli et al. 2015): 1) Luhman 16A, assumed non-variable; 2) Luhman 16B clouds; and 3) Luhman 16B cloud-free.  We will be able to uniquely disentangle these components because the TESS data informs the relative phase of cloud coverage.  We will demand that our composite three-component model must reproduce the observed flux deficits in TESS while simultaneously reproducing the IGRINS spectra.  This requirement is vastly more stringent than IGRINS spectra alone, breaking degeneracies and providing transformative new constraints on cloud properties. 
 
-One of our subfield's biggest unsolved problems remains the triggering mechanism responsible for the rapid clearing of clouds in the L-T transition phase.  Luhman 16AB offers an ideal laboratory for solving the L-T transition problem: it is a binary with one object on each side of the transition, it is variable, and it is 2 pc away. No other such objects exist. This proposed DDT program stands to catapult our field by providing a line-by-line decomposition of the spectrum of clouds across the entire $H-$ and $K-$ bands, where most of the flux escapes these ultracool brown dwarfs.  Our field's biggest unsolved problem can only be understood after we can accurately account for cloud physical chemistry.  Importantly, \textbf{these spectra will have tremendous archival legacy value for decades to come}, with the prospect for snapshot image reconstruction of the stellar surface, leveraging both the TESS lightcurve and IGRINS line profile perturbations.
+One of the biggest unsolved problems in brown dwarf evolution remains the triggering mechanism responsible for the rapid clearing of clouds in the L-T transition phase.  Luhman 16AB offers an ideal laboratory for solving the L-T transition problem: it is a binary with one object on each side of the transition, it is variable, and it is 2 pc away. No other such objects exist. This proposed DDT program stands to catapult our field by providing a line-by-line decomposition of the spectrum of clouds across the entire $H-$ and $K-$ bands, where most of the flux escapes these ultracool dwarfs.  Our field's biggest unsolved problem can only be understood after we can accurately account for cloud physical chemistry.  Importantly, hese spectra will have tremendous archival legacy value for decades to come, with the prospect for snapshot image reconstruction of the stellar surface, leveraging both the TESS lightcurve and IGRINS line profile perturbations.
 
 %% 28 visits !!
 % Dates of existing:
@@ -88,13 +88,7 @@ One of our subfield's biggest unsolved problems remains the triggering mechanism
 %2020-02-12 (x5 hours!)
 
 
-While observations of Luhman 16 with IGRINS exist, none have occured contemporaneously with optical monitoring precise enough to inform the phase of modulation, yielding highly degenerate fits to a spectral decomposition triptych.  Our proposed experimental design dramatically reduces the otherwise-vast-permutations of conceivable spectral components that can fit inside a single composite IGRINS spectrum.  \textbf{The success of our program will instantly increase the value of existing IGRINS spectra of Luhman 16, since we can re-interpret spectra over multi-year baselines once we have faithfully disentangled the contribution of clouds.}
 
-TESS is not currently scheduled to re-observed Luhman 16 after Sector 37, so it is urgent that we obtain these observations now.  There will be a short three-day April window for which we plan to pursue 3 epochs through Fast Turnaround (FT), but poor weather and queue demands introduce significant risk to FT alone.  TESS might reobserve Luhman 16 in its Cycle 5 around 2023, or possibly later depending on as-yet-undetermined TESS targeting strategies (ecliptic versus all-sky).
-
-We will analyze the IGRINS spectra with state-of-the-art \texttt{Sonora} pre-computed synthetic spectral models of cloudy and cloud-free brown dwarf atmospheres developed by Co-I C. Morley (Marley et al. in prep).  Our team has developed two open source tools to conduct rapid data-model comparisons with the Sonora model grids. First, \texttt{intuition}\footnote{https://github.com/BrownDwarf/intuition} is a human-in-the-loop fitting procedure that rapidly provides best fits and upper and lower bounds on physical parameters such as $T_{eff}, \log{g}, v\sin{i}, RV$ and the \emph{veiling}-like signal from clouds.  Second, our group has implemented probabilistic spectral decomposition (Gully-Santiago et al. 2017) with the inference framework \texttt{Starfish}\footnote{https://github.com/iancze/Starfish} (Czekala et al. 2015).  We have applied the framework to high resolution brown dwarf spectra, with remarkable success (Zhang et al. 2021, Gully-Santiago et al. in prep.).  These tools are ready today, making it feasible to have a clear and rapid path to publication.
-
-Luhman 16 is so bright that individual on-sky integrations should be comparable to the overhead time associated with acquiring the target, for a total visit time of 20 minutes.  For five epochs, we expect the entire program to take less than 2 hours.
 
 \clearpage
 
@@ -111,7 +105,7 @@ Luhman 16 is so bright that individual on-sky integrations should be comparable 
 
 \setlength{\parindent}{0cm}
 \textbf{References:}
-{\footnotesize \textbf{Apai, Nardiello, \& Bedin 2021} ApJ, Volume 906, Issue 1, id.64 \textbf{Czekala et al. 2015} ApJ, 812, 128.; \textbf{Gully-Santiago et al. 2017} ApJ, 836, 200.; \textbf{Zhang et al. 2021} arXiv:2011.12294;
+{\footnotesize \textbf{Apai, Nardiello, \& Bedin 2021} ApJ, Volume 906, Issue 1, id.64 \textbf{Buenzli E, Saumon D, Marley MS, Apai D, Radigan J, et al. 2015.} ApJ. 798(2):127 \textbf{Czekala et al. 2015} ApJ, 812, 128.; \textbf{Gully-Santiago et al. 2017} ApJ, 836, 200.; \textbf{Zhang et al. 2021} arXiv:2011.12294;
 \setlength{\parindent}{1cm}
 
 \clearpage
@@ -136,6 +130,15 @@ Luhman 16 is so bright that individual on-sky integrations should be comparable 
 % Facilities" section.
 
 \expdesign
+
+While observations of Luhman 16 with IGRINS exist, none have occured contemporaneously with optical monitoring precise enough to inform the phase of modulation, yielding highly degenerate fits to a spectral decomposition triptych.  Our proposed experimental design dramatically reduces the otherwise-vast-permutations of conceivable spectral components that can fit inside a single composite IGRINS spectrum.  \textbf{The success of our program will instantly increase the value of existing IGRINS spectra of Luhman 16, since we can re-interpret spectra over multi-year baselines once we have faithfully disentangled the contribution of clouds.}
+
+TESS is not currently scheduled to re-observed Luhman 16 after Sector 37, so it is urgent that we obtain these observations now.  There will be a short three-day April window for which we plan to pursue 3 epochs through Fast Turnaround (FT), but poor weather and queue demands introduce significant risk to FT alone.  TESS might reobserve Luhman 16 in its Cycle 5 around 2023, or possibly later depending on as-yet-undetermined TESS targeting strategies (ecliptic versus all-sky).
+
+We will analyze the IGRINS spectra with state-of-the-art \texttt{Sonora} pre-computed synthetic spectral models of cloudy and cloud-free brown dwarf atmospheres developed by Co-I C. Morley (Marley et al. in prep).  Our team has developed two open source tools to conduct rapid data-model comparisons with the Sonora model grids. First, \texttt{intuition}\footnote{https://github.com/BrownDwarf/intuition} is a human-in-the-loop fitting procedure that rapidly provides best fits and upper and lower bounds on physical parameters such as $T_{\mathrm{eff}}, \log{g}, v\sin{i}, RV$ and the \emph{veiling}-like signal from clouds.  Second, our group has implemented probabilistic spectral decomposition (Gully-Santiago et al. 2017) with the stellar inference framework \texttt{Starfish}\footnote{https://github.com/iancze/Starfish} (Czekala et al. 2015).  We have applied the framework to high resolution brown dwarf spectra, with remarkable success (Zhang et al. 2021, Gully-Santiago et al. in prep.).  These tools are ready today, making it feasible to have a clear and rapid path to publication.
+
+Luhman 16 is so bright that individual on-sky integrations should be comparable to the overhead time associated with acquiring the target, for a total visit time of 20 minutes.  For five epochs, we expect the entire program to take less than 2 hours.
+
 
 % PROPRIETARY PERIOD
 %
