Nearing a final version, comments from Bowler, destined for C Morley again.

--- a/proposal/2021A/DDT/tess_luhman16/GemPhase1_US.tex
+++ b/proposal/2021A/DDT/tess_luhman16/GemPhase1_US.tex
@@ -49,13 +49,13 @@
 
 Condensate clouds should pervade the atmospheres of brown dwarfs and exoplanets, dictating the energy balance of these substellar objects and controlling their photometric and spectroscopic properties. Yet physical understanding of these clouds has largely been limited to coarse phenomenology.  Clouds are difficult to model and even more difficult to observe, owing to the absence of prominent spectral features and the intrinsic low luminosity of ultracool LT dwarfs.  Variable brown dwarfs offer a straightforward way to compare atmospheric columns with different cloud opacities to isolate the effect and properties of clouds.
 
-Last month Apai et al. 2021 presented the \emph{TESS} lightcurve of the nearest known brown dwarf system, Luhman 16AB; residing at a mere 2 pc from the Sun, it is our third closest neighbor. The proximity of this ultracool L7.5/T0.5 pair makes them the latest spectral type objects amenable to contemporaneous TESS monitoring and high fidelity ground-based observations.  Previous spatially resolved observations (Buenzli et al. 2015) showed that Luhman 16 A has weak to no variability but Luhman 16 B has a $>10\%$ variability in the near infrared.  It was not clear what the TESS lightcurve would show.  Remarkably, the Sector 10 TESS lightcurve of Luhman 16 shows over 100 rotations with global peak-to-valley cloud-induced variations over 25 days exceeding 15\% (Figure 1).  The long-term variations can be attributed to cloud pattern changes driven by atmospheric circulation.  However, due to the lack of simultaneous spectroscopic data, how much the cloud opacity, thickness, and particle size changed is unknown.
+Last month Apai et al. 2021 presented the \emph{TESS} lightcurve of the nearest known brown dwarf system, Luhman 16AB; residing at a mere 2 pc from the Sun, it is our third closest neighbor. The proximity of this L7.5+T0.5 pair makes them the latest spectral type objects amenable to contemporaneous TESS monitoring and high fidelity ground-based observations.  Previously, Hubble Space Telescope spectroscopy resolving the $0.3''$ binary angular separation showed that Luhman 16 A has weak to no variability but Luhman 16 B has a $>10\%$ variability in the near infrared (Buenzli et al. 2015).  It was not clear what the TESS lightcurve would show.  Remarkably, the Sector 10 TESS lightcurve of Luhman 16 pinpointed the 5.28 hour rotation period of Luhman 16B and revealed global peak-to-valley cloud-induced variations over 25 days exceeding 15\% (Figure 1).  Conspicuous long-term variations convey cloud pattern changes driven by atmospheric circulation, signaling a new era of photometric data quality on these timescales.  However, due to the lack of simultaneous spectroscopic data, how much the cloud opacity, thickness, and particle size changed remains unknown.
 
-Gemini did not observe Luhman 16 contemporaneously with TESS Sector 10 (March 26 - April 22, 2019).  We missed a key opportunity before, but will not miss it this time-- simultaneous TESS monitoring will allow us to know the rotational phase, and when coupled with high-resolution spectroscopy, we can disentangle the A/B components and variability by observing the spectral changes due to variations in cloud opacities.
+Gemini did not observe Luhman 16 contemporaneously with TESS Sector 10 (March 26 - April 22, 2019).  We missed a key opportunity, but will not miss it this time-- simultaneous TESS monitoring yields the exact rotational phase, and when coupled with high-resolution spectroscopy, we can disentangle the A/B components and variability by observing the spectral changes due to variations in cloud opacities.
 
-Here we propose multi-epoch IGRINS observations contemporaneous with continuous TESS Sector 36 monitoring, from March 8 - March 18.  The epochs can be scheduled randomly during this 10 day window, easing their burden on the queue.  With five epochs---and TESS-Sector-10-like modulations---we expect to sample a flux range of $\sim 8\%$ (Figure 2), corresponding to a cloud coverage change large enough to detect with IGRINS with $S/N\sim100$.  We will decompose the IGRINS spectra into three components (Buenzli et al. 2015): 1) Luhman 16A, assumed non-variable; 2) Luhman 16B clouds; and 3) Luhman 16B cloud-free.  We will be able to uniquely disentangle these components because the TESS data informs the relative phase of cloud coverage.  We will demand that our composite three-component model must reproduce the observed flux deficits in TESS while simultaneously reproducing the IGRINS spectra.  This requirement is vastly more stringent than IGRINS spectra alone, breaking degeneracies and providing transformative new constraints on cloud properties. 
+Here we propose multi-epoch IGRINS observations contemporaneous with continuous TESS Sector 36 monitoring, from March 8 - March 18, 2021.  The epochs can be scheduled randomly during this 10 day window, easing their burden on the queue.  With at least five epochs---and TESS-Sector-10-like modulations---we expect to sample a flux range of $\sim 8\%$ (Figure 2), corresponding to a cloud coverage change large enough to detect with IGRINS with $S/N\sim100$.  The IGRINS spectra will be unresolved under typical seeing conditions.  We will decompose the IGRINS spectra into three components (Buenzli et al. 2015): 1) Luhman 16A, assumed non-variable; 2) Luhman 16B clouds; and 3) Luhman 16B cloud-free.  The composite three-component model must resemble the observed IGRINS spectra \emph{while simultaneously reproducing the observed flux deficits in the red-optical TESS band}.  This requirement is vastly more stringent than multi-epoch IGRINS spectra in isolation; it guides our interpretation and seamlessly transforms our ability to constrain cloud properties. 
 
-One of the biggest unsolved problems in brown dwarf evolution remains the triggering mechanism responsible for the rapid clearing of clouds in the L-T transition phase.  Luhman 16AB offers an ideal laboratory for solving the L-T transition problem: it is a binary with one object on each side of the transition, it is variable, and it is 2 pc away. No other such objects exist. This proposed DDT program stands to catapult our field by providing a line-by-line decomposition of the spectrum of clouds across the entire $H-$ and $K-$ bands, where most of the flux escapes these ultracool dwarfs.  Our field's biggest unsolved problem can only be understood after we can accurately account for cloud physical chemistry.  Importantly, hese spectra will have tremendous archival legacy value for decades to come, with the prospect for snapshot image reconstruction of the stellar surface, leveraging both the TESS lightcurve and IGRINS line profile perturbations.
+One of the biggest unsolved problems in brown dwarf evolution remains the triggering mechanism responsible for the rapid clearing of clouds in the L-T transition phase.  Luhman 16AB offers an ideal laboratory for solving the L-T transition problem: it is a binary with one object on each side of the transition, it is variable, and it is 2 pc away. No other such objects exist. This proposed DDT program stands to catapult our field by providing a line-by-line decomposition of the spectrum of clouds across the entire $H-$ and $K-$ bands, where most of the flux escapes these ultracool dwarfs.  Our field's biggest unsolved problem can only be understood after we can accurately account for cloud physical chemistry.  Importantly, these spectra will have tremendous archival legacy value for decades to come, with the prospect for snapshot image reconstruction of the stellar surface, leveraging both the TESS lightcurve and IGRINS line profile perturbations.
 
 %% 28 visits !!
 % Dates of existing:
@@ -92,21 +92,39 @@ One of the biggest unsolved problems in brown dwarf evolution remains the trigge
 
 \clearpage
 
-\begin{figure}[h!]
+\begin{figure}[ht!]
     \centering{\includegraphics[scale=0.7]{figures/Luhman16AB_IGRINS_2021A_TESS_scheduling.pdf}}
-    \caption{Sector 10 TESS light curve of Luhman 16AB mapped onto its Sector 36 observation window in March 2021.  Conspicuous large amplitude modulation attributable to a 5.28 day rotational modulation swells from 4\% to 10\%, and is associated with Luhman 16B.  A secular running-mean level trend of 10\% may arise from the ebb-and-flow of differentially rotating zonal circulation bands, analogous to a scaled-up Jupiter.}
+    \caption{Sector 10 TESS light curve of Luhman 16AB mapped onto its Sector 36 observation window in March 2021.  Conspicuous large amplitude modulation attributable to a 5.28 hour rotational modulation swells from 4\% to 10\%, and is associated with Luhman 16B.  A secular running-mean level trend of 10\% may arise from the ebb-and-flow of differentially rotating zonal circulation bands, analogous to a scaled-up Jupiter.}
 \end{figure}
 
-\begin{figure}[h!]
+ 
+\begin{figure}[ht!]
     \centering{\includegraphics[scale=0.7]{figures/Luhman16AB_IGRINS_2021A_TESS_flux_sampling.pdf}}
-    \caption{Example of TESS flux sampling of Luhman 16AB arising from randomly-scheduled IGRINS observations between March 8 and March 18.  By observing randomly we sample a larger range of cloud coverage than existing and costly all-night point-and-stare strategies (Crossfield et al. 2014).  The larger lever arm on cloud coverage fraction will make it easier to disambiguate the cloud and cloud-free spectral components.}
+    \caption{Example of TESS flux sampling of Luhman 16AB arising from randomly-scheduled IGRINS observations between March 8 and March 18, 2021.  By observing randomly we sample a larger range of cloud coverage than existing and costly all-night point-and-stare strategies (Crossfield et al. 2014).  The larger lever arm on cloud coverage fraction will make it easier to disambiguate the cloud and cloud-free spectral components.}
 \end{figure}
     
 
+ 
+\begin{figure}[ht!]
+    \centering{\includegraphics[scale=0.45]{figures/intuition_demo01.png}}  
+
+    \centering{\includegraphics[scale=0.45]{figures/intuition_demo02.png}}
+    \caption{Demo of the \texttt{intuition} framework that provides human-in-the-loop fitting of IGRINS spectra to self-consistent physical models of brown dwarfs.  In these snapshots, a user has decreased the $T_{\mathrm{eff}}$ by 100 K from top to bottom panels, resulting in a different spectral appearance at 1.705 and 1.722 $\mu m$.  The user can currently tune intrinsic properties like surface gravity ($\log{g}$), and extrinsic kinematic properties like radial velocity and projected equatorial rotational broadening.  We will add additional sliders for the interpretation of this proposal:  component B's $T_{\mathrm{eff}}$ and $\log{g}$, and experimental prescriptions for component B's cloud propertiers including but not limited to filling factor, characteristic temperature of clouds, and cloud gain sedimentation efficiency $f_{\mathrm{sed}}$.  The simplicity of this framework leverages proven human pattern matching and provides resilience against brittle optimization code that tends to overfit model imperfections.  This simplicity yields the ability to produce results quickly.  }
+\end{figure}
+
+  
+
 \setlength{\parindent}{0cm}
 \textbf{References:}
-{\footnotesize \textbf{Apai, Nardiello, \& Bedin 2021} ApJ, Volume 906, Issue 1, id.64 \textbf{Buenzli E, Saumon D, Marley MS, Apai D, Radigan J, et al. 2015.} ApJ. 798(2):127 \textbf{Czekala et al. 2015} ApJ, 812, 128.; \textbf{Gully-Santiago et al. 2017} ApJ, 836, 200.; \textbf{Zhang et al. 2021} arXiv:2011.12294;
+{\footnotesize $\bullet$ \textbf{Apai, Nardiello, \& Bedin 2021} ApJ, Volume 906, Issue 1, id.64 
+$\bullet$ \textbf{Buenzli E, Saumon D, Marley MS, Apai D, Radigan J, et al. 2015.} ApJ. 798(2):127. 
+$\bullet$ Crossfield et al. 2014 Nature, Volume 505, Issue 7485, pp. 654-656 (2014).
+$\bullet$ \textbf{Czekala et al. 2015} ApJ, 812, 128.; 
+$\bullet$ \textbf{Gully-Santiago et al. 2017} ApJ, 836, 200.; 
+$\bullet$ \textbf{Zhang et al. 2021} arXiv:2011.12294;}
 \setlength{\parindent}{1cm}
+
+\emph{(Figures continued on the next page.)}
 
 \clearpage
 
@@ -131,13 +149,12 @@ One of the biggest unsolved problems in brown dwarf evolution remains the trigge
 
 \expdesign
 
-While observations of Luhman 16 with IGRINS exist, none have occured contemporaneously with optical monitoring precise enough to inform the phase of modulation, yielding highly degenerate fits to a spectral decomposition triptych.  Our proposed experimental design dramatically reduces the otherwise-vast-permutations of conceivable spectral components that can fit inside a single composite IGRINS spectrum.  \textbf{The success of our program will instantly increase the value of existing IGRINS spectra of Luhman 16, since we can re-interpret spectra over multi-year baselines once we have faithfully disentangled the contribution of clouds.}
-
-TESS is not currently scheduled to re-observed Luhman 16 after Sector 37, so it is urgent that we obtain these observations now.  There will be a short three-day April window for which we plan to pursue 3 epochs through Fast Turnaround (FT), but poor weather and queue demands introduce significant risk to FT alone.  TESS might reobserve Luhman 16 in its Cycle 5 around 2023, or possibly later depending on as-yet-undetermined TESS targeting strategies (ecliptic versus all-sky).
+TESS is not currently scheduled to re-observed Luhman 16 after Sector 37 (April 2 - Apr 28, 2021), and with IGRINS off the telescope for most of April, it is urgent that we obtain these observations now.  There will be a short three-day April window for which we plan to pursue 3 epochs through Fast Turnaround (FT), but poor weather and queue demands introduce significant risk to FT alone, and we hope to combine the longer time-baseline information from March to April to probe a wide range of states of the cloud coverage.  TESS might reobserve Luhman 16 in its Cycle 5 around 2023, or possibly later depending on as-yet-undetermined TESS targeting strategies (ecliptic versus all-sky).
 
 We will analyze the IGRINS spectra with state-of-the-art \texttt{Sonora} pre-computed synthetic spectral models of cloudy and cloud-free brown dwarf atmospheres developed by Co-I C. Morley (Marley et al. in prep).  Our team has developed two open source tools to conduct rapid data-model comparisons with the Sonora model grids. First, \texttt{intuition}\footnote{https://github.com/BrownDwarf/intuition} is a human-in-the-loop fitting procedure that rapidly provides best fits and upper and lower bounds on physical parameters such as $T_{\mathrm{eff}}, \log{g}, v\sin{i}, RV$ and the \emph{veiling}-like signal from clouds.  Second, our group has implemented probabilistic spectral decomposition (Gully-Santiago et al. 2017) with the stellar inference framework \texttt{Starfish}\footnote{https://github.com/iancze/Starfish} (Czekala et al. 2015).  We have applied the framework to high resolution brown dwarf spectra, with remarkable success (Zhang et al. 2021, Gully-Santiago et al. in prep.).  These tools are ready today, making it feasible to have a clear and rapid path to publication.
 
-Luhman 16 is so bright that individual on-sky integrations should be comparable to the overhead time associated with acquiring the target, for a total visit time of 20 minutes.  For five epochs, we expect the entire program to take less than 2 hours.
+Luhman 16 is so bright that individual on-sky integrations should be comparable to the overhead time  associated with acquiring the target (5-10 minutes) and rotating the slit, for a total visit time of 20 minutes.  For visits spread out over five nights, we expect the entire program to take 1.5 hours.  We are requesting 2.5 hours in hopes that on select nights we can take two observations spaced by 1-3 hours to sample different projected hemispheres within the same 5.28 hour rotation cycle.  Our minimum request is therefore 1.5 hours, with a goal of 2.5 hours.
+
 
 
 % PROPRIETARY PERIOD
@@ -179,7 +196,7 @@ Luhman 16 is so bright that individual on-sky integrations should be comparable 
 % observations proposed here?
 
 \otherfacilities
-
+This program coordinates with the NASA TESS extended mission.  All lightcurves for TESS are publicly available at the STScI MAST archive within weeks or months of their telemetry back to Earth.  These observations will have clear synergies with the interpretation of the TESS lightcurve, providing enduring legacy value.  Our team members are currently supported through fellowships and grants aimed at improving the theoretical models of brown dwarf clouds, directly applicable to the science proposed here.  
 
 % PAST USE
 %
@@ -192,16 +209,16 @@ Luhman 16 is so bright that individual on-sky integrations should be comparable 
 % proposal with a \relatedwork{} command.
 %
 % For example:
-%\thepast
-%\begin{tabular}{lll}
-%NOAO Proposal ID & Gemini ID & Status \\
-%================ & ========= & ====== \\
-%2010B-0700 & GS-2010B-Q-1 & Published in Smith 2011, ApJ, 1, 1. \\
-%\relatedwork{2011A-0700} & GS-2011A-Q-50 & Data obtained, reduction underway. \\
-%\end{tabular}
-
 \thepast
-
+\begin{tabular}{lll}
+NOAO Proposal ID & Gemini ID & Status \\
+================ & ========= & ====== \\
+- & GS-2020B-Q-318  & Data obtained in Dec 2020, reduction underway. \\
+ & GS-2021A-Q-311 & Data collection in progress, reduction underway. \\
+\end{tabular}
+ 
+All data from Gemini South have been acquired in the last 3 months, and are currently being analyzed.  
+Our team has extensive experience with IGRINS and we are actively developing open source tools to foster community contributions to IGRINS data analysis, including \texttt{muler}\footnote{https://muler.readthedocs.io/} and \texttt{blase}\footnote{https://blase.readthedocs.io/}.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -220,7 +237,7 @@ Luhman 16 is so bright that individual on-sky integrations should be comparable 
 \technicaldescription
 
 
-We request that the slit be rotated parallel to the PA of the Luhman 16 AB system, so that the relative flux of the components can be controlled under variable seeing conditions.  The components are close enough that standard ABBA nod patterns can still separate the two components, making standard IGRINS data reduction feasible.
+We request that the slit be rotated parallel to the PA of the Luhman 16 AB system, so that the relative flux of the components can be controlled under variable seeing conditions.  The components are close enough ($0.3''$) that standard ABBA nod patterns can still separate the two components, making standard IGRINS data reduction feasible.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -266,7 +283,7 @@ We request that the slit be rotated parallel to the PA of the Luhman 16 AB syste
 
 \justifyduplications
 
-
+While observations of Luhman 16 with IGRINS exist, none have occured contemporaneously with optical monitoring precise enough to inform the phase of modulation, yielding highly degenerate fits to a spectral decomposition triptych.  Our proposed experimental design dramatically reduces the otherwise-vast-permutations of conceivable spectral components that can fit inside a single composite IGRINS spectrum.  \textbf{The success of our program will instantly increase the value of existing IGRINS spectra of Luhman 16, since we can re-interpret spectra over multi-year baselines once we have faithfully disentangled the contribution of clouds.}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -287,9 +304,11 @@ We request that the slit be rotated parallel to the PA of the Luhman 16 AB syste
 
 \itcresults
 
-We used the exposure time calculator from the IGRINS At Gemini website:
+We used the exposure time calculator from the IGRINS At Gemini website:  
+
 https://sites.google.com/site/igrinsatgemini/proposing-and-observing
 
+For $K=8.8$ we expect and IQ70, we expect 220 second exposure times.  For an ABBA quad, that is 15 minutes of on-sky integration time.  With 5 visits and overhead we expect a grand total of 1.5 hours of program time.  
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
